Set up for work.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<button ng-click="getData()">Submit</button> 
 	</form>
 </div>
-
+<div my-directives></div>
 <div>
 <h2>Notifications</h2>
 	<form>
